# wasi-streams-demo

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
guest-rust/: Cargo.toml
guest-rust/src/: main.rs
host-wasmtime/: Cargo.toml
host-wasmtime/src/: main.rs
wit/: deps.toml  world.wit
